fix: hotfix LandscapeNotice scrollbar & delay

--- a/src/window.scss
+++ b/src/window.scss
@@ -13,32 +13,39 @@
       animation-name: bounceInDown;
       animation-iteration-count: 1;
       animation-duration: 0.8s;
-    }
 
-    .window-innerwrapper {
-      @apply overflow-y-auto px-4 pointer-events-auto text-white;
-      max-height: calc(100vh - 2em);
-
-      @supports selector(::-webkit-scrollbar) {
-        &::-webkit-scrollbar {
-          width: 10px;
-        }
-        &::-webkit-scrollbar-track {
-          margin-top: 1.5rem;
-          border-radius: 8px;
-          background: #964e4e;
-          box-shadow: 0px 0px 6px 2px rgba(255, 255, 255, 0.5) inset;
-        }
-        &::-webkit-scrollbar-thumb {
-          border-radius: 8px;
-          background-color: #d55959;
-          box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.5) inset;
-        }
+      .window-innerwrapper {
+        @apply px-2 pointer-events-auto text-white;
       }
 
-      @supports not selector(::-webkit-scrollbar) {
-        scrollbar-color: #d55959 transparent;
-        scrollbar-width: thin;
+      &.screen-pref .window-innerwrapper,
+      &.screen-lang-pref .window-innerwrapper,
+      &.screen-volume-pref .window-innerwrapper,
+      &.screen-help .window-innerwrapper {
+        @apply overflow-y-auto px-4;
+        max-height: calc(100vh - 2em);
+
+        @supports selector(::-webkit-scrollbar) {
+          &::-webkit-scrollbar {
+            width: 10px;
+          }
+          &::-webkit-scrollbar-track {
+            margin-top: 1.5rem;
+            border-radius: 8px;
+            background: #964e4e;
+            box-shadow: 0px 0px 6px 2px rgba(255, 255, 255, 0.5) inset;
+          }
+          &::-webkit-scrollbar-thumb {
+            border-radius: 8px;
+            background-color: #d55959;
+            box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.5) inset;
+          }
+        }
+
+        @supports not selector(::-webkit-scrollbar) {
+          scrollbar-color: #d55959 transparent;
+          scrollbar-width: thin;
+        }
       }
     }
 
